@@ -1,6 +1,9 @@
        2008: 0.5.6 Miek <miek@miek.nl>
- -- ?? --
+ -- Bugfixes and documentation improvements --
  * Document the use of /dev/null better in rdup.1
+ * Knut Franke: generate rdup-backups.1 from configure.ac
+ * Dave Foster: fixup relative pathname argument in conjunction 
+   with the -E (exclude) option
 
 
 12 Feb 2008: 0.5.5 Miek <miek@miek.nl>
